# DAO_launcher_kit

./: .env  .env.backup  .env.development  .env.example  .env.local  .env.new  .env.production  .gitignore  .ic-assets.json5  Cargo.toml  README.md  README_2.md  canister_ids.json.template  deploy-playground.sh  deploy-step-by-step.sh  deploy.sh  dfx.json  fix-declarations.sh  fix-internet-identity.sh  package-lock.json  package.json  random.txt  setup.sh  tmp_ic_releases.json  update-env.sh
.github/: copilot-instructions.md
DAO_LAUNCHER_KIT/: Cargo.toml  dfx.json  package-lock.json
Landing Page/: package-lock.json
dao_launcher/: Cargo.toml  README.md  dfx.json  package.json  webpack.config.js
demo-stuff/: backend.md  frontend.md  integration.md
docs/: API_DOCUMENTATION.md  DEVELOPER_GUIDE.md  IMAGE_UPLOAD_IMPLEMENTATION.md  INLINE_CODE_DOCUMENTATION.md  README.md  USER_GUIDES.md
docs-site/: package-lock.json
governance_canister/: package-lock.json  package.json
integrated_dao/: index.html  package-lock.json  package.json
landing_page_of_dao/: package-lock.json  package.json
scripts/: deploy-mainnet.sh  fetch-ledger.sh  maintenance.sh  manage-cycles.sh  update-backend.sh  update-env.sh  update-frontend.sh
sign-in-internet-identity/: README.md  package-lock.json  package.json  tailwind.config.js
smartContract/: Governance.rs  Treasury.rs  VotingSystem.rs
smartContract/governance_canister/src/governance_canister_backend/: Cargo.toml  governance_canister_backend.did
src of UI page/: index.css
src_of_UI_page/: App.css  App.jsx  index.css
(+226 files in other folders)
